syntax = "proto3";

package message;

message StreamData {
    repeated double samplesLeft = 1;
    repeated double samplesRight = 2;
    int64 nextAt = 3;
}