syntax = "proto3";

package message;

message Announce {
    uint32 service_number = 1;
    string device_name = 2;
}